<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/sort_start_date_desc"
        android:title="@string/sort_start_date_desc" />
    <item
        android:id="@+id/sort_start_date_asc"
        android:title="@string/sort_start_date_asc" />
    <item
        android:id="@+id/sort_end_date_desc"
        android:title="@string/sort_end_date_desc" />
    <item
        android:id="@+id/sort_end_date_asc"
        android:title="@string/sort_end_date_asc" />
    <item
        android:id="@+id/sort_community"
        android:title="@string/sort_community" />
    <item
        android:id="@+id/sort_amount_desc"
        android:title="@string/sort_amount_desc" />
    <item
        android:id="@+id/sort_amount_asc"
        android:title="@string/sort_amount_asc" />

</menu>
